Don't break bwc